# pybiosyntax

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  cli.md  development.md  index.md  installation.md  usage.md  vendoring.md
examples/: basic.py  ffi_ctypes_lowlevel.py
src/biosyntax/: __init__.py  __main__.py  _native.py
tests/: smoke_test_installed.py  test_biosyntax_python.py
